Fixes overflow issue with small screen sizes

--- a/imports/ui/layouts/nav/top-menu/top-menu.less
+++ b/imports/ui/layouts/nav/top-menu/top-menu.less
@@ -49,7 +49,7 @@
   line-height: 20px;
   color: white;
   padding: 15px;
-  max-width: 300px;
+  max-width: 280px;
   overflow:hidden;
   text-overflow:ellipsis;
   white-space:nowrap;
